Fix #3135